******

    gnome-mplayer is currently in a heavy state of changes 
    
    Known broken items
    
    Website Playback
    DVD w/o menu playback
    TV playback
    
    Details
    Audio Meter
    
    Keyboard shortcuts
    
    Preferences screen, doesn't set the preferences on gmtk_media_player

******


Development
    Screenshot capture notification
    Make setting the media attributes a common function
    Enable deinterlacing
    Make disable upscaling work
    Fix Cancel/Close button layout in pref and adv dialog
    Make Pref/Next buttons appear when file has chapters
    Make Advanced video settings work
    Disable DVD w/o menu for now. 
    Playlist and Cache Percentage changes
    Fix memory leak in gmtk_media_player set_attribute_string
    More subtitle work
    Make audio track and subtitle selection menus work
    Activate/Deactivate subtitle visibility,delay,size menus based on if subs exist or not
    Fix resize issues with normal, double and half sizes
    Move menu updates from resize_window, make the gui change based on media state
    Move GUI updates from set_gui_state, make the gui change based on media state
    Fix state tracking
    Fix DVD menu selection
    Make playlists work
    Make enhanced subtitles work
    Add many attributes to gmtk_media_player
    Replace send_command with dummy function, until conversion is complete
    Replace mplayer_shutdown with gmtk version
    Add more attributes and methods to libgmtk - gmtk_media_player, still more to add
    Remove mute and other values from idledata
    Remove ThreadData type
    Remove thread.[c|h]
    Start conversion to libgmtk - gmtk_media_player
    libgmtk - gmtk_media_player, convert from GtkFixed layout to GtkAlignment layout, allows window to shrink in GTK3
    Allow code to compile when --enable-gtk3 is used
    More configure macros
    Add --enable-gtk3 to configure, code does not compile yet in this mode
    libgmtk - gtk3 prep